# iso4217

./: .gitignore  .travis.yml  AGENTS.md  LICENSE  MANIFEST.in  README.rst  deploy_rsa.enc  objects.inv  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yaml
iso4217/: __init__.py  __init__.pyi  test.py
