[metadata]
name = iso4217
description = ISO 4217 currency data package for Python
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/dahlia/iso4217
author = Hong Minhee
author_email = hong.minhee@gmail.com
license = Public Domain
keywords = internationalization i18n currency iso4217
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Stackless
    Topic :: Office/Business :: Financial
    Topic :: Software Development :: Internationalization

[options]
include_package_data = True
packages = iso4217
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
install_requires =
    importlib-resources;     python_version  >"3.5" and python_version <"3.9"
    importlib-resources<3.3; python_version =="3.5"

[options.package_data]
iso4217 =
    __init__.pyi
    py.typed
    table.xml

[bdist_wheel]
universal = 1
